feat: 请求头，错误统一

--- a/example/index.html
+++ b/example/index.html
@@ -5,9 +5,9 @@
   <body>
     <p>hello world</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js" integrity="sha512-Meww2sXqNHxI1+5Dyh/9KAtvI9RZSA4c1K2k5iL02oiPO/RH3Q30L3M1albtqMg50u4gRTYdV4EXOQqXEI336A==" crossorigin="anonymous"></script>
     <script src="./../dist/index.js"></script>
     <script>
-      console.log()
       const request = new adAxios({
         baseUrl: 'https://api.github.com'
       })
@@ -17,7 +17,7 @@
       realApi({
         test: 1
       }).then(res => {
-        console.info(134)
+        document.getElementsByTagName('p')[0].innerHTML = JSON.stringify(res.data)
       })
     </script>
   </body>
