手动删除实现

--- a/example/index.html
+++ b/example/index.html
@@ -8,17 +8,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js" integrity="sha512-Meww2sXqNHxI1+5Dyh/9KAtvI9RZSA4c1K2k5iL02oiPO/RH3Q30L3M1albtqMg50u4gRTYdV4EXOQqXEI336A==" crossorigin="anonymous"></script>
     <script src="./../dist/index.js"></script>
     <script>
+      let CancelToken = axios.CancelToken
+      let source = CancelToken.source()
+
       const request = new adAxios({
         baseUrl: 'https://api.github.com'
       })
       const realApi = request.getInstance('/users/solomonxie', {
         method: 'get'
       })
+      const realPureApi = request.getPureInstance('/users/solomonxie', {
+        method: 'get',
+        cancelToken: source.token
+      })
       realApi({
         test: 1
       }).then(res => {
         document.getElementsByTagName('p')[0].innerHTML = JSON.stringify(res.data)
       })
+      realPureApi().then(res => {
+        document.getElementsByTagName('p')[0].innerHTML = JSON.stringify(res.data)
+      }).catch(err => {
+        console.log(err, '124')
+      })
+      source.cancel('134')
+      function normalRequest () {}
+      function cancelRequestByCode () {}
+      function cancelRequestByUser () {}
     </script>
   </body>
 </html>
