--- a/example/index.html
+++ b/example/index.html
@@ -3,38 +3,59 @@
   <head>
   </head>
   <body>
-    <p>hello world</p>
+    <p></p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js" integrity="sha512-Meww2sXqNHxI1+5Dyh/9KAtvI9RZSA4c1K2k5iL02oiPO/RH3Q30L3M1albtqMg50u4gRTYdV4EXOQqXEI336A==" crossorigin="anonymous"></script>
     <script src="./../dist/index.js"></script>
     <script>
-      let CancelToken = axios.CancelToken
-      let source = CancelToken.source()
-
-      const request = new adAxios({
-        baseUrl: 'https://api.github.com'
-      })
-      const realApi = request.getInstance('/users/solomonxie', {
-        method: 'get'
-      })
-      const realPureApi = request.getPureInstance('/users/solomonxie', {
-        method: 'get',
-        cancelToken: source.token
-      })
-      realApi({
-        test: 1
-      }).then(res => {
-        document.getElementsByTagName('p')[0].innerHTML = JSON.stringify(res.data)
-      })
-      realPureApi().then(res => {
-        document.getElementsByTagName('p')[0].innerHTML = JSON.stringify(res.data)
-      }).catch(err => {
-        console.log(err, '124')
-      })
-      source.cancel('134')
-      function normalRequest () {}
+      
+      function normalRequest () {
+        let CancelToken = axios.CancelToken
+        let source = CancelToken.source()
+        const request = new adAxios({
+          baseUrl: 'https://api.github.com'
+        })
+        const realApi = request.getInstance('/users/solomonxie', {
+          method: 'get'
+        })
+        const realPureApi = request.getPureInstance('/users/solomonxie', {
+          method: 'get',
+          cancelToken: source.token
+        })
+        realApi({
+          test: 1
+        }).then(res => {
+          document.getElementsByTagName('p')[0].innerHTML = JSON.stringify(res.data)
+        })
+        realPureApi().then(res => {
+          document.getElementsByTagName('p')[0].innerHTML = JSON.stringify(res.data)
+        }).catch(err => {
+          console.log(err, '124')
+        })
+        source.cancel('134')
+      }
       function cancelRequestByCode () {}
       function cancelRequestByUser () {}
+      function winningTest () {
+        const winningRequest = new adAxios({
+          baseUrl: 'http://172.16.6.201/base'
+        })
+        const login = winningRequest.getInstance('/api/v1/base/user/check_username_password', {
+          method: 'post',
+          headers: {
+            Authorization: '',
+            'W-SEQ': 21,
+            'W-FLOW': 'canary'
+          },
+          data: {
+            username: 'L10044',
+            password: '456'
+          }
+        })
+        login()
+      }
+      winningTest()
+      // normalRequest()
     </script>
   </body>
 </html>
